src/objects/Client__c.object
<CustomObject>
    <description>Microfinance Client</description>
    <fields>
        <fullName>Address_1__c</fullName>
        <label>Address 1</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_2__c</fullName>
        <label>Address 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_3__c</fullName>
        <label>Address 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Am_I_awesome__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Am I awesome</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_Date__c</fullName>
        <label>Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Business_Activity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Activity</label>
        <referenceTo>Business_Activity__c</referenceTo>
        <relationshipLabel>Clients</relationshipLabel>
        <relationshipName>Clients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Center__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Center</label>
        <referenceTo>Center__c</referenceTo>
        <relationshipLabel>Clients</relationshipLabel>
        <relationshipName>Clients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Check_for_Duplicates__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Check for Duplicates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Citizenship__c</fullName>
        <label>Citizenship</label>
        <picklist>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>City_Name__c</fullName>
        <label>City Name</label>
        <picklist>
            <picklistValues>
                <fullName>Bombay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>kolkatta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delhi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chennai</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientCnt__c</fullName>
        <defaultValue>1</defaultValue>
        <label>ClientCnt</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Client_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Client External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Start_Date__c</fullName>
        <description>This is the point at which client is first Approved.</description>
        <label>Client Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Client_Training__c</fullName>
        <label>Client Training</label>
        <summaryForeignKey>Client_Training__c.Client_ID__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>INDIA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Loan_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Loan Officer</label>
        <referenceTo>Staff__c</referenceTo>
        <relationshipLabel>Clients (Current Loan Officer)</relationshipLabel>
        <relationshipName>Clients1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <description>Date of Birth</description>
        <label>Date of Birth</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <label>District</label>
        <picklist>
            <picklistValues>
                <fullName>Bugesera</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burera</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gakenke</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gasabo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Education_level__c</fullName>
        <label>Education level</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10th</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12th</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graduate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Employment_Business_Details_Count__c</fullName>
        <label>Employment/Business Details Count</label>
        <summaryForeignKey>Employment_Business_Detail__c.Client__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Ethnicity__c</fullName>
        <label>Ethnicity</label>
        <picklist>
            <picklistValues>
                <fullName>Indian</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Family_Details_Rec_Count__c</fullName>
        <label>Family Details Rec Count</label>
        <summaryForeignKey>Family_Details__c.Client__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Family_Employment_Details_Count__c</fullName>
        <label>Family Employment Details Count</label>
        <summaryForeignKey>Family_Employment_Details__c.Client__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Fee_Set__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Fee Set for Client Registration</description>
        <inlineHelpText>Fee Set for Client Registration</inlineHelpText>
        <label>Fee Set</label>
        <referenceTo>Fee_Set__c</referenceTo>
        <relationshipLabel>Clients</relationshipLabel>
        <relationshipName>Clients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fees_Collected__c</fullName>
        <description>Fees Collected</description>
        <inlineHelpText>Fees Collected</inlineHelpText>
        <label>Fees Collected</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Financial_Education__c</fullName>
        <label>Financial Education</label>
        <summaryForeignKey>Financial_Education__c.Client__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>Given Name</description>
        <label>First Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Government_ID__c</fullName>
        <description>Government ID or National ID</description>
        <label>Government ID #</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Group</description>
        <inlineHelpText>Group</inlineHelpText>
        <label>Group</label>
        <referenceTo>Group__c</referenceTo>
        <relationshipLabel>Clients</relationshipLabel>
        <relationshipName>Clients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Handicapped__c</fullName>
        <label>Handicapped</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Home_Evaluation_Count__c</fullName>
        <label>Home Evaluation Count</label>
        <summaryForeignKey>Home_Evaluation__c.Client__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Home_Town__c</fullName>
        <label>Home Town</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_Count__c</fullName>
        <description>This variable store the total count of identification detail records for particular client.</description>
        <label>Identification Details Count</label>
        <summaryForeignKey>Client_Identification__c.Client__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Is_Mandate__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this field when Details are related to Customer Relative.</inlineHelpText>
        <label>Is Mandate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>Family Name</description>
        <label>Last Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan Officer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Clients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Marital_Status__c</fullName>
        <label>Marital Status</label>
        <picklist>
            <picklistValues>
                <fullName>Single</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Married</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Widowed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Divorced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abandoned</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <description>Middle Name</description>
        <label>Middle Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Field__c</fullName>
        <label>New Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nominee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Nominee</label>
        <referenceTo>Client__c</referenceTo>
        <relationshipLabel>Clients (Nominee)</relationshipLabel>
        <relationshipName>Clients2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_children__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of children</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Office__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Branch</label>
        <referenceTo>Office_Name__c</referenceTo>
        <relationshipLabel>Clients</relationshipLabel>
        <relationshipName>Clients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Religion__c</fullName>
        <label>Religion</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Income_Estimate_Count__c</fullName>
        <label>Sales Income Estimate Count</label>
        <summaryForeignKey>Sales_Income_Estimate__c.Client__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Salutation__c</fullName>
        <label>Salutation</label>
        <picklist>
            <picklistValues>
                <fullName>Mr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mrs.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ms</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Source_Loan_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Loan Officer</label>
        <referenceTo>Staff__c</referenceTo>
        <relationshipLabel>Clients</relationshipLabel>
        <relationshipName>Clients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Spouse_Father_s_First_Name__c</fullName>
        <description>Spouse&apos;s or Father&apos;s Given Name</description>
        <label>Spouse/Father &apos;s First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spouse_Father_s_Last_Name__c</fullName>
        <description>Spouse&apos;s or Father&apos;s Family Name</description>
        <label>Spouse/Father&apos;s Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spouse_Father_s_Middle_Name__c</fullName>
        <description>Spouse&apos;s or Father&apos;s Middle Name</description>
        <label>Spouse/Father&apos;s Middle Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spouse_or_Father__c</fullName>
        <label>Spouse or Father?</label>
        <picklist>
            <picklistValues>
                <fullName>Father</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spouse</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>Andaman and Nicobar Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andhra Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arunachal Prades</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bihar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chandigarh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chhattisgarh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dadra and Nagar Haveli</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daman and Diu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delhi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gujarat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Haryana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Himachal Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jammu and Kashmir</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jharkhand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Karnataka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kerala</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lakshadweep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Madhya Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maharashtra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manipurß</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meghalaya</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mizoram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nagaland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orissa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Puducherry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Punjab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rajasthan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sikkim</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial Application</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Approval</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Telephone_No__c</fullName>
        <label>Telephone No.</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Fees_Charged__c</fullName>
        <label>Total Fees Charged</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trained__c</fullName>
        <description>Indicates whether a client has been trained</description>
        <label>Trained On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vicinity__c</fullName>
        <label>Landmark</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zipcode__c</fullName>
        <label>Zipcode</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zone__c</fullName>
        <label>Zone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isBioScanRegistered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>this is auto-checked when biometric scan is registered for user</description>
        <label>isBioScanRegistered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isMember__c</fullName>
        <formula>IF( Client_Training__c  &gt; 0  , &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isMember</label>
        <type>Text</type>
    </fields>
    <label>Client</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Address_2__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>C-{00000000}</displayFormat>
        <label>Client ID</label>
        <type>AutoNumber</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01IE00000000EA1MAM_00NE0000000IWI5MAO</fullName>
        <active>true</active>
        <field>Group__c.Group_Leader__c</field>
        <filterItems>
            <field>Client__c.Group__r.Id</field>
            <operation>equals</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <filterItems>
            <field>Client__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Group_Group Leader</name>
        <sourceObject>Group__c</sourceObject>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IE00000000EM2MAM_00NE0000000G74rMAC</fullName>
        <active>true</active>
        <field>Loan_Account__c.Client__c</field>
        <filterItems>
            <field>Client__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Loan Account_Client</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IE00000000En3MAE_00NE0000000GRSkMAO</fullName>
        <active>true</active>
        <field>Savings_Account__c.Client_ID__c</field>
        <filterItems>
            <field>Client__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Savings Account_Client ID</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IE00000000MpEMAU_00NE0000000GmnCMAS</fullName>
        <active>true</active>
        <errorMessage>Selected client in the PPI form is not active.</errorMessage>
        <field>PPI_Household_Data__c.Client__c</field>
        <filterItems>
            <field>Client__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>PPI Household Data_Client</name>
    </namedFilters>
    <pluralLabel>Clients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Address1_Special_char_check</fullName>
        <active>true</active>
        <description>Address1 Special_char_check</description>
        <errorConditionFormula>NOT(REGEX( Address_1__c , &quot;^[a-zA-Z0-9-&amp;/#\\s]*$&quot;))</errorConditionFormula>
        <errorDisplayField>Address_1__c</errorDisplayField>
        <errorMessage>Address should not include special characters</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Address2_Special_char_check</fullName>
        <active>false</active>
        <description>Address Special_char_check</description>
        <errorConditionFormula>NOT(REGEX( Address_2__c , &quot;^[a-zA-Z0-9-&amp;/#\\s]*$&quot;))</errorConditionFormula>
        <errorDisplayField>Address_2__c</errorDisplayField>
        <errorMessage>Address should not include special characters</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Address3_Special_char_check</fullName>
        <active>false</active>
        <description>Address Special_char_check</description>
        <errorConditionFormula>NOT(REGEX( Address_3__c , &quot;^[a-zA-Z0-9-&amp;/#\\s]*$&quot;))</errorConditionFormula>
        <errorDisplayField>Address_3__c</errorDisplayField>
        <errorMessage>Address should not include special characters</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Age_Between_18_and_60</fullName>
        <active>true</active>
        <errorConditionFormula>OR
      ((IF(
             MONTH(TODAY())&gt;MONTH( Date_of_Birth__c ),
             YEAR(TODAY())-YEAR(Date_of_Birth__c ),
             IF(AND(MONTH(TODAY()) = MONTH(Date_of_Birth__c ), DAY(TODAY()) &gt;=      
             DAY(Date_of_Birth__c )),YEAR(TODAY())-YEAR(Date_of_Birth__c),
             (YEAR(TODAY())-YEAR(Date_of_Birth__c ))-1)
             )
             &lt;  18) ,
       (IF(
            MONTH(TODAY())&gt;MONTH( Date_of_Birth__c ),
            YEAR(TODAY())-YEAR(Date_of_Birth__c ),
            IF(AND(MONTH(TODAY()) = MONTH(Date_of_Birth__c ), DAY(TODAY()) &gt;= 
            DAY(Date_of_Birth__c )),YEAR(TODAY())-YEAR(Date_of_Birth__c),
           (YEAR(TODAY())-YEAR(Date_of_Birth__c ))-1)
           )
           &gt;   60))</errorConditionFormula>
        <errorDisplayField>Date_of_Birth__c</errorDisplayField>
        <errorMessage>Age should be between18 to 60 years</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Center_Check</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISBLANK(Center__c)) &amp;&amp; NOT(ISBLANK( Group__c )) &amp;&amp; ( Group__r.Center__c !=  Center__c || ISBLANK(Group__r.Center__c))</errorConditionFormula>
        <errorMessage>User entered Center does not match Center for Group</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Max_Number_of_Persons</fullName>
        <active>true</active>
        <errorConditionFormula>NOT( ISBLANK( Group__c ) ) &amp;&amp;  (Group__r.Maximum_number_of_persons__c  =  Group__r.Number_of_Active_Clients__c )</errorConditionFormula>
        <errorMessage>You cannot add more clients to this group. The allowable number of clients has already been reached.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>City_Special_char_check</fullName>
        <active>false</active>
        <description>City_Special_char_check</description>
        <errorConditionFormula>NOT(REGEX( Address_3__c , &quot;^[a-zA-Z\\s]*$&quot;))</errorConditionFormula>
        <errorDisplayField>City__c</errorDisplayField>
        <errorMessage>City should not include special characters</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ClientStartDate</fullName>
        <active>false</active>
        <description>This will not work here. Will only work in a trigger. Because otherwise you can never make any changes to a client! E.g. add a fee set. So deactivating for now.</description>
        <errorConditionFormula>Client_Start_Date__c  &lt;    TODAY()</errorConditionFormula>
        <errorMessage>The client&apos;s start date cannot be before today.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EitherCenterOrGroupCheck</fullName>
        <active>false</active>
        <description>The client&apos;s Loan Officer and the Group&apos;s/Center&apos;s Loan Officer must be the same.</description>
        <errorConditionFormula>((Group__c &lt;&gt; null) &amp;&amp; ( Loan_Officer__r.Id   &lt;&gt; Group__r.Assigned_LO__r.Id))  || (( Center__c  &lt;&gt; null) &amp;&amp; ( Loan_Officer__r.Id   &lt;&gt;  Center__r.Loan_Officer__r.Id ))</errorConditionFormula>
        <errorMessage>The client&apos;s Loan Officer and the Group&apos;s/Center&apos;s Loan Officer must be the same.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FirstName_Special_char_check</fullName>
        <active>true</active>
        <description>FirstName_Special_char_check</description>
        <errorConditionFormula>NOT(REGEX(  First_Name__c  , &quot;^[a-zA-Z]*$&quot;))</errorConditionFormula>
        <errorDisplayField>First_Name__c</errorDisplayField>
        <errorMessage>First Name should not include special characters</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GovernmentID_Special_char_check</fullName>
        <active>true</active>
        <description>GovernmentID_Special_char_check</description>
        <errorConditionFormula>NOT(REGEX(  Government_ID__c  , &quot;^[a-zA-Z0-9-\\s]*$&quot;))</errorConditionFormula>
        <errorDisplayField>Government_ID__c</errorDisplayField>
        <errorMessage>GovernmentID should not include special characters</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Group_Staus_check</fullName>
        <active>true</active>
        <description>Group_Staus_check</description>
        <errorConditionFormula>NOT(ISBLANK(Group__c) || ISNULL(Group__c))
&amp;&amp; NOT( ISPICKVAL( Group__r.Group_Status__c , &apos;Approved&apos;) )</errorConditionFormula>
        <errorMessage>The Group is not yet  Approved</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LastName_Special_char_check</fullName>
        <active>true</active>
        <description>LastName_Special_char_check</description>
        <errorConditionFormula>NOT(REGEX(   Last_Name__c   , &quot;^[a-zA-Z0-9-\\s]*$&quot;))</errorConditionFormula>
        <errorDisplayField>Last_Name__c</errorDisplayField>
        <errorMessage>Last Name should not include special characters</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MiddleName_Special_char_check</fullName>
        <active>true</active>
        <description>MiddleName_Special_char_check</description>
        <errorConditionFormula>NOT(REGEX(    Middle_Name__c   , &quot;^[a-zA-Z]*$&quot;))</errorConditionFormula>
        <errorDisplayField>Middle_Name__c</errorDisplayField>
        <errorMessage>Middle Name should not include special characters</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_of_children_check</fullName>
        <active>true</active>
        <description>No of children check</description>
        <errorConditionFormula>OR(
          Number_of_children__c &gt; 20,Number_of_children__c &lt; 0
)</errorConditionFormula>
        <errorDisplayField>Number_of_children__c</errorDisplayField>
        <errorMessage>Number of children should be an integer less than 20</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Spouse_FirstName_Special_char_check</fullName>
        <active>true</active>
        <description>Spouse_FirstName_Special_char_check</description>
        <errorConditionFormula>NOT(REGEX(     Spouse_Father_s_First_Name__c    , &quot;^[a-zA-Z]*$&quot;))</errorConditionFormula>
        <errorDisplayField>Spouse_Father_s_First_Name__c</errorDisplayField>
        <errorMessage>First Name should not include special characters</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Spouse_LastName_Special_char_check</fullName>
        <active>true</active>
        <description>Spouse_LastName_Special_char_check</description>
        <errorConditionFormula>NOT(REGEX(      Spouse_Father_s_Last_Name__c    , &quot;^[a-zA-Z]*$&quot;))</errorConditionFormula>
        <errorDisplayField>Spouse_Father_s_Last_Name__c</errorDisplayField>
        <errorMessage>Last Name should not include special characters</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Spouse_MiddleName_Special_char_check</fullName>
        <active>true</active>
        <description>Spouse_MiddleName_Special_char_check</description>
        <errorConditionFormula>NOT(REGEX( Spouse_Father_s_Middle_Name__c   , &quot;^[a-zA-Z]*$&quot;))</errorConditionFormula>
        <errorDisplayField>Spouse_Father_s_Middle_Name__c</errorDisplayField>
        <errorMessage>Middle Name should not include special characters</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Telephone_Special_char_check</fullName>
        <active>false</active>
        <description>Telephone_Special_char_check</description>
        <errorConditionFormula>NOT(REGEX(  Telephone_No__c    , &quot;^[0-9]{10}$&quot;))</errorConditionFormula>
        <errorDisplayField>Telephone_No__c</errorDisplayField>
        <errorMessage>Invalid Telephone No.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Zipcode_check</fullName>
        <active>false</active>
        <description>Zipcode_check</description>
        <errorConditionFormula>NOT(REGEX( Zipcode__c , &quot;\\d{6}&quot;))</errorConditionFormula>
        <errorMessage>Invalid Zipcode</errorMessage>
    </validationRules>
</CustomObject>